// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders disabled with defaultChecked 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  cursor: pointer;
  color: #c0cad5;
}

.c0 svg[data-name='checked'] {
  display: none;
}

.c0 > input:checked ~ svg[data-name='checked'] {
  display: inline-block;
  color: #c0cad5;
}

.c0 > input:checked ~ svg[data-name='empty'] {
  display: none;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

<div
  className="c0 "
  disabled={true}
>
  <input
    className="c1"
    defaultChecked={true}
    disabled={true}
    id="check-box"
    onChange={[MockFunction]}
    size={20}
    type="checkbox"
  />
  <svg
    className="c2"
    data-name="checked"
    fill="currentcolor"
    height={20}
    viewBox="0 0 24 24"
    width={20}
  >
    <path
      d="M6 3h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm4 14l9-8.6L17.6 7 10 14.3l-3.6-3.5L5 12.2l5 4.8z"
    />
  </svg>
  <svg
    className="c2"
    data-name="empty"
    fill="currentcolor"
    height={20}
    viewBox="0 0 24 24"
    width={20}
  >
    <path
      d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3z"
    />
  </svg>
</div>
`;

exports[`Checkbox renders disabled with disabled prop 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  cursor: pointer;
  color: #c0cad5;
}

.c0 svg[data-name='checked'] {
  display: none;
}

.c0 > input:checked ~ svg[data-name='checked'] {
  display: inline-block;
  color: #c0cad5;
}

.c0 > input:checked ~ svg[data-name='empty'] {
  display: none;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

<div
  className="c0 "
  disabled={true}
>
  <input
    className="c1"
    disabled={true}
    id="check-box"
    onChange={[MockFunction]}
    size={20}
    type="checkbox"
  />
  <svg
    className="c2"
    data-name="checked"
    fill="currentcolor"
    height={20}
    viewBox="0 0 24 24"
    width={20}
  >
    <path
      d="M6 3h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm4 14l9-8.6L17.6 7 10 14.3l-3.6-3.5L5 12.2l5 4.8z"
    />
  </svg>
  <svg
    className="c2"
    data-name="empty"
    fill="currentcolor"
    height={20}
    viewBox="0 0 24 24"
    width={20}
  >
    <path
      d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3z"
    />
  </svg>
</div>
`;

exports[`Checkbox renders with the theme passed specifically 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  cursor: pointer;
  color: #4f6f8f;
}

.c0 svg[data-name='checked'] {
  display: none;
}

.c0 > input:checked ~ svg[data-name='checked'] {
  display: inline-block;
  color: #007aff;
}

.c0 > input:checked ~ svg[data-name='empty'] {
  display: none;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

<div
  className="c0 "
>
  <input
    className="c1"
    id="check-box"
    size={20}
    type="checkbox"
  />
  <svg
    className="c2"
    data-name="checked"
    fill="currentcolor"
    height={20}
    viewBox="0 0 24 24"
    width={20}
  >
    <path
      d="M6 3h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm4 14l9-8.6L17.6 7 10 14.3l-3.6-3.5L5 12.2l5 4.8z"
    />
  </svg>
  <svg
    className="c2"
    data-name="empty"
    fill="currentcolor"
    height={20}
    viewBox="0 0 24 24"
    width={20}
  >
    <path
      d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3z"
    />
  </svg>
</div>
`;

exports[`Checkbox renders without the theme passed specifically 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  cursor: pointer;
  color: #4f6f8f;
}

.c0 svg[data-name='checked'] {
  display: none;
}

.c0 > input:checked ~ svg[data-name='checked'] {
  display: inline-block;
  color: #007aff;
}

.c0 > input:checked ~ svg[data-name='empty'] {
  display: none;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

<div
  className="c0 "
>
  <input
    className="c1"
    id="check-box"
    onChange={[MockFunction]}
    size={20}
    type="checkbox"
  />
  <svg
    className="c2"
    data-name="checked"
    fill="currentcolor"
    height={20}
    viewBox="0 0 24 24"
    width={20}
  >
    <path
      d="M6 3h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm4 14l9-8.6L17.6 7 10 14.3l-3.6-3.5L5 12.2l5 4.8z"
    />
  </svg>
  <svg
    className="c2"
    data-name="empty"
    fill="currentcolor"
    height={20}
    viewBox="0 0 24 24"
    width={20}
  >
    <path
      d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3z"
    />
  </svg>
</div>
`;
